k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microfe-takeofs
  labels:
    app: microfe-takeofs
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: microfe-takeofs
