k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microfe-takeofs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ${INGRESS_HOST}
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: microfe-takeofs
            port:
              number: 80
  tls:
  - hosts:
    - ${INGRESS_HOST}
    secretName: tls-secret
